XMLtoCSV/objects/unpackaged/objects/Expense_Attribution_vod__c.object
<CustomObject>
    <description>Stores the attribution of expenses to individual entities, such as users, service providers, or institutions. Expense Attributions are automatically created in the background based on data from expense headers and expense lines.</description>
    <fields>
        <fullName>Actual_vod__c</fullName>
        <description>Calculated actual value per incurred expense.</description>
        <formula>Expense_Line_vod__r.Split_Amount_Per_Person_vod__c</formula>
        <label>Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Line_vod__c</fullName>
        <description>Relationship to an expense line.</description>
        <label>Expense Line</label>
        <referenceTo>Expense_Line_vod__c</referenceTo>
        <relationshipLabel>Expense Attributions</relationshipLabel>
        <relationshipName>Expense_Attributions_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expense_Type_Name_vod__c</fullName>
        <description>Stamped value of the expense type as the expense was recorded. This value will remain constant even if the expense type changes.</description>
        <formula>Expense_Line_vod__r.Expense_Type_Name_vod__c</formula>
        <label>Expense Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that incurred an expense.</description>
        <label>Incurred Expense (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Expense Attributions</relationshipLabel>
        <relationshipName>Expense_Attributions_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Attendee_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Incurred_Expense_Attendee_vod</description>
        <label>Incurred Expense (Attendee)</label>
        <referenceTo>EM_Attendee_vod__c</referenceTo>
        <relationshipLabel>Expense Attributions</relationshipLabel>
        <relationshipName>Expense_Attributions_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Speaker_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The speaker that incurred an expense.</description>
        <label>Incurred Expense (Speaker)</label>
        <referenceTo>EM_Event_Speaker_vod__c</referenceTo>
        <relationshipLabel>Expense Attributions</relationshipLabel>
        <relationshipName>Expense_Attributions_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Team_Member_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The team member that incurred an expense.</description>
        <label>Incurred Expense (Team Member)</label>
        <referenceTo>EM_Event_Team_Member_vod__c</referenceTo>
        <relationshipLabel>Expense Attributions</relationshipLabel>
        <relationshipName>Expense_Attributions_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Type_vod__c</fullName>
        <description>Stamp the incurred expense type.</description>
        <label>Incurred Expense Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attendee_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event_Speaker_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event_Team_Member_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venue_vod</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Vendor_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The vendor that incurred an expense.</description>
        <label>Incurred Expense (Vendor)</label>
        <referenceTo>EM_Vendor_vod__c</referenceTo>
        <relationshipLabel>Expense Attributions</relationshipLabel>
        <relationshipName>Expense_Attributions_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Venue_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The venue that incurred an expense.</description>
        <label>Incurred Expense (Venue)</label>
        <referenceTo>EM_Venue_vod__c</referenceTo>
        <relationshipLabel>Expense Attributions</relationshipLabel>
        <relationshipName>Expense_Attributions_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_vod__c</fullName>
        <description>Store the incurred expense name.</description>
        <label>Incurred Expense</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date_vod__c</fullName>
        <description>Stamped value of the expense payment date for reporting.</description>
        <formula>Expense_Line_vod__r.Expense_Header_vod__r.Payment_Date_vod__c</formula>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <label>Expense Attribution</label>
    <nameField>
        <displayFormat>EA-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Attributions</pluralLabel>
    <recordTypes>
        <fullName>Event_Expense_Attribution_vod</fullName>
        <active>true</active>
        <description>Event Expense Attribution</description>
        <label>Event_Expense_Attribution_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>